<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:background="@drawable/froena1">
   
    <LinearLayout
        android:id="@+id/linearName"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >
        
        <TextView
        android:id="@+id/textViewName"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:layout_gravity="center"
        android:text="@string/textName" />

        <EditText
            android:id="@+id/editTextName"
            style="@style/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>
    </LinearLayout>
	<LinearLayout
	    android:id="@+id/linearKat"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >
	    <TextView
	        android:id="@+id/textViewKat"
	        style="@style/text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="@string/textKat" />

	    <Spinner
	        android:id="@+id/spinnerKat"
	        style="@style/text"
     		android:layout_width="0dip"
	        android:layout_height="63dp"
	        android:prompt="@string/kat_choose"
	        android:layout_weight="1" />
    </LinearLayout>
    
	<LinearLayout
	    android:id="@+id/linearEpil"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearKat"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >
	    <TextView
	        android:id="@+id/textViewEpil"
	        style="@style/text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="@string/textEpil" />

	    <Spinner
	        android:id="@+id/spinnerEpil"
	        style="@style/text"
	        android:layout_width="wrap_content"
	        android:layout_height="63dp"
	        android:layout_weight="1" />
    </LinearLayout>

	<LinearLayout
	    android:id="@+id/linearAoth"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearEpil"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

	    <CheckBox
	        android:id="@+id/checkBoxAoth"
	        style="@style/button_text"
	        android:layout_centerHorizontal="true"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/checkAoth" />

    </LinearLayout>
    
	<Button
	    android:id="@+id/btnAddUser2"
        style="@style/button_text"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/linearAoth"
	    android:layout_centerHorizontal="true"
        android:background="@drawable/buttons"
	    android:layout_marginTop="60dp"
	    android:text="@string/btnAdduser2" />

</RelativeLayout>
